--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
       text-align: center;
       margin: 20px;
     }
-    iframe {
-      border: none;
-      border-radius: 10px;
+    a {
+      font-size: 18px;
+      color: white;
+      background-color: #007BFF;
+      padding: 10px 20px;
+      border-radius: 5px;
+      text-decoration: none;
+    }
+    a:hover {
+      background-color: #0056b3;
     }
   </style>
 </head>
 <body>
   <h1>Welcome to Our Chatbot</h1>
-  <p>Interact with our chatbot below:</p>
-  <iframe
-    src="https://huggingface.co/spaces/engrshafaqatalimemon/RAG_Google_Drive"
-    width="100%"
-    height="700px"
-    title="Chatbot"
-  ></iframe>
+  <p>Click the button below to interact with our chatbot:</p>
+  <a href="https://huggingface.co/spaces/engrshafaqatalimemon/RAG_Google_Drive">Launch Chatbot</a>
 </body>
 </html>
